# ksirk

./: .flatpak-manifest.json  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Doxyfile  KsirK.kdevelop  README  TODO  config.h.cmake  ksirk-1.6-i486-1as.txt  ksirk.categories  ksirk.lsm  ksirk.xpm  snapcraft.yaml
ksirk/: .krazy  .ssh-agent  023_compile_with_ksirk.patch  CMakeLists.txt  KsirkGlobalDefinitions.h  Makefile.am  MessageBubble.cpp  MessageBubble.h  Messages.sh  config-ksirk.h.cmake  config-ksirk.h.in  decoratedgameframe.cpp  decoratedgameframe.h  extract-onu-names.pl  fightArena.cpp  fightArena.h  gestionSprites.cpp  hics-app-ksirk.svgz  kgamewin.cpp  kgamewin.h  kgamewinslots.cpp  krightdialog.cpp  krightdialog.h  ksirk.desktop  ksirk.knsrc  ksirk.qrc  ksirkConfigDialog.cpp  ksirkConfigDialog.h  ksirksettings.kcfg  ksirksettings.kcfgc  ksirkui.rc  main.cpp  mainMenu.cpp  mainMenu.h  mainMenu.ui  newgamesetup.cpp  newgamesetup.h  org.kde.ksirk.appdata.xml  org.kde.ksirk.desktop  preferences.ui  (+1 more)
ksirk/Dialogs/: CMakeLists.txt  InvasionSlider.cpp  InvasionSlider.h  Makefile.am  jabberconnect.cpp  jabberconnect.h  jabberconnect.ui  jabbergameui.cpp  jabbergameui.h  jabbergameui.ui  joingame.cpp  joingame.h  joingame.ui  kplayersetupdialog.cpp  kplayersetupdialog.h  kplayersetupwidget.cpp  kplayersetupwidget.h  kwaitedplayersetupdialog.cpp  kwaitedplayersetupdialog.h  newGameDialog.ui  newGameDialogImpl.cpp  newGameDialogImpl.h  newGameSummary.ui  newGameSummaryWidget.cpp  newGameSummaryWidget.h  qplayersetupdialog.ui  qwaitedplayersetupdialog.ui  restartOrExitDialog.ui  restartOrExitDialogImpl.cpp  restartOrExitDialogImpl.h  tcpconnectwidget.cpp  tcpconnectwidget.h  tcpconnectwidget.ui  wscript_build
ksirk/GameLogic/: CMakeLists.txt  KMessageParts.cpp  KMessageParts.h  KsirkChatDelegate.cpp  KsirkChatDelegate.h  KsirkChatItem.cpp  KsirkChatItem.h  KsirkChatModel.cpp  KsirkChatModel.h  Makefile.am  aiColsonPlayer.cpp  aiColsonPlayer.h  aiplayer.cpp  aiplayer.h  aiplayerio.cpp  aiplayerio.h  continent.cpp  continent.h  country.cpp  country.h  dice.cpp  dice.h  distributiondata.cpp  distributiondata.h  eventslistproperty.cpp  eventslistproperty.h  gameautomaton.cpp  gameautomaton.h  gamesequence.cpp  gamesequence.h  goal.cpp  goal.h  nationality.cpp  nationality.h  newplayerdata.cpp  newplayerdata.h  onu.cpp  onu.h  player.cpp  player.h  (+2 more)
ksirk/Jabber/: jabberaccount.cpp  jabberaccount.h  jabberbasecontact.cpp  jabberbasecontact.h  jabberbookmarks.cpp  jabberbookmarks.h  jabberbytestream.cpp  jabberbytestream.h  jabbercapabilitiesmanager.cpp  jabbercapabilitiesmanager.h  jabberclient.cpp  jabberclient.h  jabberconnector.cpp  jabberconnector.h  jabbercontact.cpp  jabbercontact.h  jabbercontactpool.cpp  jabbercontactpool.h  jabbergroupcontact.cpp  jabbergroupcontact.h  jabbergroupmembercontact.cpp  jabbergroupmembercontact.h  jabberprotocol.cpp  jabberprotocol.h  jabberresource.cpp  jabberresource.h  jabberresourcepool.cpp  jabberresourcepool.h  jt_pubsub.cpp  jt_pubsub.h  kmessagejabber.cpp  kmessagejabber.h  privacylist.cpp  privacylist.h  privacylistitem.cpp  privacylistitem.h  privacymanager.cpp  privacymanager.h
ksirk/SaveLoad/: CMakeLists.txt  Makefile.am  ksirkgamexmlhandler.cpp  ksirkgamexmlhandler.h  ksirkgamexmlloader.cpp  ksirkgamexmlloader.h  wscript_build
ksirk/Sprites/: CMakeLists.txt  Makefile.am  animsprite.cpp  animsprite.h  animspritesgroup.cpp  animspritesgroup.h  animspriteslist.cpp  animspriteslist.h  animspritespool.cpp  animspritespool.h  armysprite.h  arrowsprite.cpp  arrowsprite.h  backgnd.cpp  backgnd.h  cannonsprite.cpp  cannonsprite.h  cavalrysprite.cpp  cavalrysprite.h  flagsprite.h  infantrysprite.cpp  infantrysprite.h  skinSpritesData.cpp  skinSpritesData.h  wscript_build
ksirk/icons/: CMakeLists.txt
ksirk/icons/hicolor/: CMakeLists.txt
ksirk/icons/locolor/: CMakeLists.txt
ksirk/iris/qcm/: qt42.qcm
ksirk/iris/src/: CMakeLists.txt  config-libiris.h.in  iris_export.h
ksirk/iris/src/jdns/: jdns.c  jdns.h  jdns_mdnsd.c  jdns_mdnsd.h  jdns_p.h  jdns_packet.c  jdns_packet.h  jdns_sys.c  jdns_util.c  qjdns.cpp  qjdns.h
ksirk/iris/src/libidn/: idn-int.h  idna.h  internal.h  punycode.h  qint.h  stringprep.h
ksirk/iris/tools/nettool/: main.cpp
ksirk/iris/tools/xmpptest/: test.ui  xmpptest.cpp
ksirk/skins/: CMakeLists.txt  Makefile.am  README-skins.txt  jriskmap2ksirkskin.pl  skinsdir
ksirk/skins/default/: Makefile.am
ksirk/skins/default/Data/: CMakeLists.txt  onu.desktop  onu.xml  world.desktop
ksirk/skins/default/Images/: CMakeLists.txt
ksirk/skins/default/Sounds/: CMakeLists.txt
ksirk/skins/legacy/Data/: CMakeLists.txt  world.desktop
ksirk/skins/legacy/Images/: CMakeLists.txt
ksirk/skins/legacy/Sounds/: CMakeLists.txt
ksirk/skins/realpol/Data/: CMakeLists.txt  Makefile.am  onu.xml
ksirk/skins/realpol/Images/: CMakeLists.txt  Makefile.am
ksirk/skins/realpol/Sounds/: CMakeLists.txt  Makefile.am
ksirk/skins/static/: CMakeLists.txt
ksirk/skins/static/Data/: CMakeLists.txt  onu.desktop  world.desktop
ksirkskineditor/: CMakeLists.txt  Messages.sh  NOTES  continent.cpp  continent.h  country.cpp  country.h  goal.cpp  goal.h  ksirkSkinEditorConfigDialog.cpp  ksirkSkinEditorConfigDialog.h  ksirkcontinentdefinition.h  ksirkcontinentdefinition.ui  ksirkcountrydefinition.cpp  ksirkcountrydefinition.h  ksirkcountrydefinition.ui  ksirkgoaldefinition.h  ksirkgoaldefinition.ui  ksirknationalitydefinition.h  ksirknationalitydefinition.ui  ksirkskindefinition.h  ksirkskindefinition.ui  ksirkskineditor.desktop  ksirkskineditor.qrc  ksirkskineditor_debug.cpp  ksirkskineditor_debug.h  ksirkskineditorcountriesselectiondialog.h  ksirkskineditorcountriesselectiondialog.ui  ksirkskineditorpixmapitem.cpp  ksirkskineditorpixmapitem.h  ksirkskineditorscene.cpp  ksirkskineditorscene.h  ksirkskineditorsettings.kcfg  ksirkskineditorsettings.kcfgc  ksirkskineditortextitem.cpp  ksirkskineditortextitem.h  ksirkskineditorui.rc  ksirkskineditorwidget.h  ksirkskineditorwidget.ui  ksirkspritesdefinition.h  (+13 more)
(+317 files in other folders)
