INCLUDES = -I$(top_srcdir)/ksirk -I$(top_srcdir)/kgame-patch -I.. \
	$(all_includes)
METASOURCES = AUTO
lib_LTLIBRARIES = libksirk_saveload.la
libksirk_saveload_la_LDFLAGS = $(all_libraries)
noinst_HEADERS = ksirkgamexmlhandler.h
libksirk_saveload_la_SOURCES = ksirkgamexmlhandler.cpp ksirkgamexmlloader.cpp
