set (pics_default_DATA
2DownArrow.png
2UpArrow.png
annuler.png
arena.svg
attackAuto.png
attackOne.png
attackThree.png
attackTwo.png
defendOne.png
defendTwo.png
distributionArmeesFinie.png
distributionArmees.png
downArrow.png
joueurSuivant.png
loader.gif
logoLeft.png
logoRight.png
map-mask.png
moveArmies.png
moveBackFive.png
moveBackOne.png
moveBackTen.png
moveFinish.png
moveFive.png
moveOne.png
moveTen.png
newNetGame.png
pool.svg
snapshot.jpg
SoldatAGenoux1.png
stopAttackAuto.png
upArrow.png
)
install( FILES ${pics_default_DATA} DESTINATION ${DATA_INSTALL_DIR}/ksirk/skins/default/Images/ )
